--- a/views/view_pedido.xml
+++ b/views/view_pedido.xml
@@ -6,8 +6,11 @@
       <field name="arch" type="xml">
         <tree>
           <field name="name"/>
+          <field name="fecha"/>
+          <field name="sub_total"/>
+          <field name="descuento"/>
           <field name="total"/>
-          <field name="subtotal"/>
+          
         </tree>
       </field>
     </record>
